[project]
name = "llm-mcp-invoke"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.20",
    "langchain-mcp-adapters>=0.0.5",
    "langchain-openai>=0.3.8",
    "langgraph>=0.3.11",
    "mcp>=1.4.1",
    "openai>=1.66.3",
]
